<resources>
    <string name="app_name">CurrencyApp</string>

    <string name="button_calc">Laske</string>

    <string name="update_failed">Valuuttakurssien päivitys epäonnistui!</string>

    <string name="last_updated">Päivitetty viimeksi:</string>
    <string name="timestamp_placeholder">00.00.0000 00:00:00</string>

    <string name="value_zero">0.000000</string>
    <string name="value_null">NULL</string>

    <string name="currency_eur">EUR</string>
    <string name="currency_usd">USD</string>
    <string name="currency_gbp">GBP</string>
    <string name="currency_sek">SEK</string>
    <string name="currency_rub">RUB</string>
    <string name="currency_chf">CHF</string>
    <string name="currency_cny">CNY</string>

</resources>